--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
         <ion-icon name="arrow-up"></ion-icon>
     </a>
 
-    <script src="portfolio.js"></script>
+    <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
